src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>Market_Fund_CO_OP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Market Fund CO-OP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>McQuay_Gear__c</fullName>
        <description>Does this account own any McQuay equipment?</description>
        <inlineHelpText>Does this account own or is the end-user of any McQuay equipment in their facilities?</inlineHelpText>
        <label>McQuay Gear? (To Be Deleted)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NO</fullName>
                    <default>true</default>
                    <label>NO</label>
                </value>
                <value>
                    <fullName>YES</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>National_Account__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Flag to identify a National Account.</description>
        <inlineHelpText>Identifies North America National Account when checked.</inlineHelpText>
        <label>National Account</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>No_of_Opportunities__c</fullName>
        <label># of Opportunities</label>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Non_Standard_T_C__c</fullName>
        <description>This will be used for the approval process so it skips legal approval.</description>
        <label>Non-Standard T&amp;C</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Number_of_Activities__c</fullName>
        <formula>Number_of_Open_Activities__c  +  Number_of_Closed_Activities__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Number of Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Closed_Activities__c</fullName>
        <label>Number of Closed Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Open_Activities__c</fullName>
        <label>Number of Open Activities</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Oracle__c</fullName>
        <description>Oracle Account Number</description>
        <label>Oracle #</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Account_Name__c</fullName>
        <formula>Parent.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Parent Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone_2__c</fullName>
        <description>Originally added for to capture Customer Bill To information from the Data Warehouse (Installed Base) for TRC Integration.</description>
        <label>Phone 2</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Physical_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to open and view/edit the Physical Address record for this Account.</inlineHelpText>
        <label>Physical Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts (Physical)</relationshipLabel>
        <relationshipName>Accounts2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Position_Strategy__c</fullName>
        <description>Position Strategy</description>
        <inlineHelpText>Position Strategy</inlineHelpText>
        <label>Position Strategy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Defend</fullName>
                </value>
                <value>
                    <fullName>Develop</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Primary_Billing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to open and view/edit the Primary Billing Address record for this Account.</inlineHelpText>
        <label>Primary Billing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts (Billing)</relationshipLabel>
        <relationshipName>Accounts3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Mailing_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to open and view/edit the Primary Mailing Address record for this Account.</inlineHelpText>
        <label>Primary Mailing Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts (Mailing)</relationshipLabel>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Shipping_Address__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Click to open and view/edit the Primary Ship To Address record for this Account.</inlineHelpText>
        <label>Primary Shipping Address</label>
        <referenceTo>Address__c</referenceTo>
        <relationshipLabel>Accounts (Ship To)</relationshipLabel>
        <relationshipName>Accounts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Products__c</fullName>
        <description>dcw_Products.pro_desc</description>
        <inlineHelpText>dcw_Products.pro_desc</inlineHelpText>
        <label>Products</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Applied Air Handling Systems</fullName>
                </value>
                <value>
                    <fullName>Chiller Products</fullName>
                </value>
                <value>
                    <fullName>Fan Coils</fullName>
                </value>
                <value>
                    <fullName>Lt. Commercial / Mini-Splits</fullName>
                </value>
                <value>
                    <fullName>Packaged Terminal Systems</fullName>
                </value>
                <value>
                    <fullName>Unit Ventilators</fullName>
                </value>
                <value>
                    <fullName>Water Source Heat Pump</fullName>
                </value>
                <value>
                    <fullName>Other Products</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>RGM_User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>RGM User</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Accounts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Source__c</fullName>
        <formula>IF ( Warehouse_ID__c &lt;&gt; &quot;&quot;, &quot;DW Order Bill To&quot;, 
     IF ( Rep_Office_ID__c &lt;&gt; &quot;&quot;, &quot;DCW&quot;, &quot;SFDC&quot;))</formula>
        <inlineHelpText>Source system for this record.
DW = Data Warehouse
DCW = Distribution Channel Warehouse
SFDC = Salesforce.com</inlineHelpText>
        <label>Record Source</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Record_Usage__c</fullName>
        <description>Designed to show other systems that use the information in this record and for the purpose of preventing record deletion.</description>
        <label>Record Usage</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DCW</fullName>
                </value>
                <value>
                    <fullName>DW</fullName>
                </value>
                <value>
                    <fullName>IE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Regional_Office__c</fullName>
        <defaultValue>false</defaultValue>
        <description>dcw_DistChannels.dc_reg_office</description>
        <inlineHelpText>dcw_DistChannels.dc_reg_office</inlineHelpText>
        <label>Regional Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Relationship__c</fullName>
        <description>Created for the DSO</description>
        <inlineHelpText>This field indicates the general current relationship this account as a whole has with Daikin. This should be updated periodically as the relationship changes</inlineHelpText>
        <label>Relationship</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>No Relationship</fullName>
                </value>
                <value>
                    <fullName>Daikin Enemy</fullName>
                </value>
                <value>
                    <fullName>Non-Favorable</fullName>
                </value>
                <value>
                    <fullName>Neutral</fullName>
                </value>
                <value>
                    <fullName>Favorable</fullName>
                </value>
                <value>
                    <fullName>Daikin Loyal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Rep_Office_ID__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>dcw_DistChannels.dc_id_no</inlineHelpText>
        <label>Rep Office ID</label>
        <length>10</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Rep_Office_Parent_ID__c</fullName>
        <inlineHelpText>dcw_DistChannels.dc_parent_id_no</inlineHelpText>
        <label>Rep Office Parent ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Review_Status__c</fullName>
        <inlineHelpText>Open = Account is in process of review, augmentation or clean.
Complete = Review, augmentation or clean is complete. (Not occurring)</inlineHelpText>
        <label>Review Status (Do Not Use)</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_System__c</fullName>
        <label>Source System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Speed_Dial_Number__c</fullName>
        <description>dcw_DistChannels.dc_speed_no</description>
        <inlineHelpText>dcw_DistChannels.dc_speed_no</inlineHelpText>
        <label>Speed Dial Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subcontractor_Value__c</fullName>
        <inlineHelpText>What type of a Subcontractor is this Company?</inlineHelpText>
        <label>Subcontractor Value</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>Chemical Treatment</fullName>
                </value>
                <value>
                    <fullName>Controls</fullName>
                </value>
                <value>
                    <fullName>Cooling Towers</fullName>
                </value>
                <value>
                    <fullName>Crane Services</fullName>
                </value>
                <value>
                    <fullName>Eddy Current Analysis</fullName>
                </value>
                <value>
                    <fullName>Electrical</fullName>
                </value>
                <value>
                    <fullName>Millwrights</fullName>
                </value>
                <value>
                    <fullName>Oil Analysis</fullName>
                </value>
                <value>
                    <fullName>Painting</fullName>
                </value>
                <value>
                    <fullName>Plumbing</fullName>
                </value>
                <value>
                    <fullName>Sheet Metal</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TCPN__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The Account is OMNIA (formally known as NIPA or TCPN)</description>
        <inlineHelpText>The Account is OMNIA (formally known as NIPA or TCPN)</inlineHelpText>
        <label>OMNIA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tax_Id__c</fullName>
        <description>Please enter the Tax Id for the Account.</description>
        <inlineHelpText>Please enter the Tax Id for the Account.</inlineHelpText>
        <label>Tax Id</label>
        <length>12</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Opportunity_Amount__c</fullName>
        <label>Total Opportunity Amount</label>
        <summarizedField>Opportunity.Amount</summarizedField>
        <summaryFilterItems>
            <field>Opportunity.StageName</field>
            <operation>notEqual</operation>
            <value>Closed Won, Closed Lost, Won, Lost</value>
        </summaryFilterItems>
        <summaryForeignKey>Opportunity.AccountId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Warehouse_ID__c</fullName>
        <description>Originally added to capture Unique Keys from the Data Warehouse (Installed Base, McQuaySales, OrderHistory) or the SFDCIntegration staging DBA for the TRC Integration.</description>
        <externalId>true</externalId>
        <label>Warehouse ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>proposify__Proposify_Id__c</fullName>
        <externalId>true</externalId>
        <label>Proposify Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Number__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>DAAL_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>Account_Number__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DAAL</value>
        </filters>
        <label>DAAL Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DAAL</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAFL_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DAFL</value>
        </filters>
        <label>DAFL Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>South_Florida</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DAGA_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DAGA</value>
        </filters>
        <label>DAGA Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DAGA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DALA_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT_SOURCE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <columns>Account_Owner_User_Department__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>DALA,Daikin Latin America</value>
        </filters>
        <label>DALA Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>DALA</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DANY_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>DANY</value>
        </filters>
        <label>DANY Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>DANY</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>DCW_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Active__c</columns>
        <columns>Location__c</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Email__c</columns>
        <columns>Rep_Office_ID__c</columns>
        <columns>Regional_Office__c</columns>
        <columns>Products__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Rep_Office_ID__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>DCW Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Daikin_Applied</role>
            <roleAndSubordinates>TRC_North_America</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>IE_Accounts</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>Record_Usage__c</columns>
        <columns>IE_Account__c</columns>
        <columns>IE_ID__c</columns>
        <columns>IE_Sync_Status__c</columns>
        <columns>IE_Updated_Date__c</columns>
        <columns>ACCOUNT.LAST_UPDATE</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Record_Usage__c</field>
            <operation>includes</operation>
            <value>IE</value>
        </filters>
        <filters>
            <field>IE_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>IE Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>Salesforce_Administration</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MCP_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>ACCOUNT.URL</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>startsWith</operation>
            <value>MCP</value>
        </filters>
        <label>MCP Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>MCP</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>My_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.INDUSTRY</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>National_Accounts</fullName>
        <booleanFilter>3 and (1 OR 2)</booleanFilter>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <columns>Account_Owner_User_Department__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>contains</operation>
            <value>National Accounts</value>
        </filters>
        <filters>
            <field>National_Account__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>ACCOUNT.NAME</field>
            <operation>notContain</operation>
            <value>DO NOT USE</value>
        </filters>
        <label>National Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>National_Accounts</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Ontario_Subcontractors</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>Subcontractor_Value__c</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE_CODE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.ADDRESS1_STATE</field>
            <operation>equals</operation>
            <value>Ontario</value>
        </filters>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Subcontractor</value>
        </filters>
        <label>Ontario Subcontractors</label>
        <language>en_US</language>
        <sharedTo>
            <roleAndSubordinates>TorontoDistrict</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Owner_Sales_Service_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.SITE</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Owner_User_Department__c</field>
            <operation>equals</operation>
            <value>Field Service</value>
        </filters>
        <label>Owner Sales - Service Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <group>All_DSO_Read_Write</group>
            <roleAndSubordinates>Service</roleAndSubordinates>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>TRC_Accounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>Record_Source__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>Rep_Office_ID__c</columns>
        <columns>Warehouse_ID__c</columns>
        <columns>Source_System__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.RECORDTYPE</field>
            <operation>equals</operation>
            <value>012C0000000Hq9V</value>
        </filters>
        <label>TRC Accounts</label>
        <language>en_US</language>
        <sharedTo>
            <role>Daikin_Applied</role>
        </sharedTo>
    </listViews>
    <recordTypes>
        <fullName>Daikin_Applied</fullName>
        <active>true</active>
        <description>All Accounts</description>
        <label>Daikin Applied</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Source_Specify_New_Value</fullName>
        <active>false</active>
        <description>This rule enforces users to specify new value for all existing old Account Source values.</description>
        <errorConditionFormula>!BEGINS( $Profile.Name , &quot;Latin&quot;) &amp;&amp; (CASE( TEXT( AccountSource ), 
&quot;Advertisement&quot;, 1, 
&quot;Contract renewal&quot;, 1, 
&quot;Customer Referral&quot;, 1, 
&quot;Customer Service Request&quot;, 1, 
&quot;Daikin internal&quot;, 1, 
&quot;Daikin shipment database&quot;, 1, 
&quot;Direct marketing&quot;, 1, 
&quot;GSA&quot;, 1, 
&quot;Independent rep&quot;, 1, 
&quot;Japanese Company Referral&quot;, 1, 
&quot;National accounts&quot;, 1, 
&quot;New equipment start-up&quot;, 1, 
&quot;Owner sales/service&quot;, 1, 
&quot;Partner Referral&quot;, 1, 
&quot;Phone Inquiry&quot;, 1, 
&quot;Purchased List&quot;, 1, 
&quot;RFP/RFI/Bid&quot;, 1, 
&quot;Self Generated&quot;, 1, 
&quot;Seminar&quot;, 1, 
&quot;Tech Tip&quot;, 1, 
&quot;Web&quot;, 1, 
&quot;Word of mouth&quot;, 1, 
&quot;&quot;, 1,0)&lt;1)


&amp;&amp; 

NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))
&amp;&amp; 
(($Profile.Name != &quot;System Administrator&quot; ) || ($Profile.Name = &quot;System Administrator&quot;&amp;&amp; PRIORVALUE(Bypass__c)=false &amp;&amp; (Bypass__c != true)))</errorConditionFormula>
        <errorDisplayField>AccountSource</errorDisplayField>
        <errorMessage>The Specified Account Source value is no longer valid. Please select a new Account Source from the list of options.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Address_Complete_value</fullName>
        <active>false</active>
        <errorConditionFormula>AND(!ISBLANK(Physical_Address__c),
      OR(ISBLANK(BillingStreet),
         ISBLANK(BillingCountry),
         ISBLANK(BillingCity))
     )


&amp;&amp; 

NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))
&amp;&amp; 
(($Profile.Name != &quot;System Administrator&quot; ) || ($Profile.Name = &quot;System Administrator&quot;&amp;&amp; PRIORVALUE(Bypass__c)=false &amp;&amp; (Bypass__c != true)))</errorConditionFormula>
        <errorMessage>Please populate the country, city and street for the physical address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Billing_Country_Validation_Rule</fullName>
        <active>false</active>
        <description>Ensures a valid three character ISO country code is entered.</description>
        <errorConditionFormula>BEGINS($Profile.Name, &quot;Latin&quot;) &amp;&amp; (LEN(BillingCountry) = 0 || LEN(BillingCountry) = 1 || LEN(BillingCountry) = 2 || LEN(BillingCountry) &gt;3 || NOT(CONTAINS(&quot;USA:ARG:BOL:BRA:BLZ:BMU:CHL:COL:CRI:CUB:DOM:ECU:SLV:GTM:GUY:HTI:HND:JAM:MEX:NIC:PAN:PRY:PER:PRI:SUR:URY:VEN:CYM:GRD:ATG:BHS:CUW:TCA:LCA:ABW:BRB:KNA:VCT:TTO:DMA:BES:MAF:SXM:AIA:VIR:ESP:ITA:BVI&quot;,BillingCountry)))
 

&amp;&amp; 

NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))
&amp;&amp; 
(($Profile.Name != &quot;System Administrator&quot; ) || ($Profile.Name = &quot;System Administrator&quot;&amp;&amp; PRIORVALUE(Bypass__c)=false &amp;&amp; (Bypass__c != true)))</errorConditionFormula>
        <errorDisplayField>BillingCountry</errorDisplayField>
        <errorMessage>Please enter a valid three-letter country code in the Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>DCW_Accounts_cannot_be_modified</fullName>
        <active>true</active>
        <description>Accounts that are integrated from DCW cannot have their Account name updated</description>
        <errorConditionFormula>AND (
   Record_Source__c = &apos;DCW&apos;,            
   ISCHANGED ( Name ) ,
        NOT(OR( $Profile.Name = &apos;System Administrator Interface&apos; ,
               $Profile.Name = &apos;System Administrator RemedyForce&apos;,
               $Profile.Name = &apos;System Integration RemedyF&apos;,
               $Profile.Name = &apos;System Administrator&apos;,
               $Profile.Name = &apos;System Integration&apos;)))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>This Account was created in DCW, you cannot modify the Account Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Future_Asset_Owner_Account_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>$Profile.Id &lt;&gt; &quot;00e80000000p6lF&quot; &amp;&amp; 
$Profile.Id &lt;&gt; &quot;00eC0000001GSlm&quot; &amp;&amp; 
$Profile.Id &lt;&gt; &quot;00eC0000001GSlh&quot; &amp;&amp;
Id = &quot;001C0000019yujW&quot;


&amp;&amp; 

NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))
&amp;&amp; 
(($Profile.Name != &quot;System Administrator&quot; ) || ($Profile.Name = &quot;System Administrator&quot;&amp;&amp; PRIORVALUE(Bypass__c)=false &amp;&amp; (Bypass__c != true)))</errorConditionFormula>
        <errorMessage>You cannot edit the Account Details for this record.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_Address_Complete_value</fullName>
        <active>false</active>
        <errorConditionFormula>AND(!ISBLANK( Primary_Shipping_Address__c ),
      OR(ISBLANK(ShippingStreet),
         ISBLANK(ShippingCountry),
         ISBLANK(ShippingCity))
     )

&amp;&amp; 


NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))</errorConditionFormula>
        <errorMessage>Please populate the country, city and street for the shipping address</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Shipping_Country_Validation_Rule</fullName>
        <active>false</active>
        <description>Ensures a valid three character ISO country code is entered.</description>
        <errorConditionFormula>BEGINS($Profile.Name, &quot;Latin&quot;) &amp;&amp; (LEN(ShippingCountry) = 0 || LEN(ShippingCountry) = 1 || LEN(ShippingCountry) = 2 || LEN(ShippingCountry) &gt;3 || NOT(CONTAINS(&quot;USA:ARG:BOL:BRA:BLZ: CHL:COL:CRI:CUB:DOM:ECU:SLV:GTM:GUY:HTI:HND:JAM:MEX:NIC:PAN:PRY:PER:PRI:SUR:URY:VEN:CYM:GRD:ATG:BHS:CUW:TCA:LCA:ABW:BRB:KNA:VCT:TTO:DMA:BES:MAF:SXM:AIA:VIR&quot;,ShippingCountry)))

&amp;&amp;

(($Profile.Name != &quot;System Administrator&quot; ) || ($Profile.Name = &quot;System Administrator&quot;&amp;&amp; PRIORVALUE(Bypass__c)=false &amp;&amp; (Bypass__c != true)))

&amp;&amp; 


NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))</errorConditionFormula>
        <errorDisplayField>ShippingCountry</errorDisplayField>
        <errorMessage>Please enter a valid three-letter country code in the Account.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Vertical_Market_Required_for_Type</fullName>
        <active>false</active>
        <description>This rule requires Vertical Market when Account type is Owner or End User.</description>
        <errorConditionFormula>!BEGINS($Profile.Name, &quot;Latin&quot;)  &amp;&amp; (ISPICKVAL(  Type , &quot;Owner&quot;) || ISPICKVAL( Type , &quot;End User&quot;))&amp;&amp; ISPICKVAL(Industry,&quot;&quot;)


&amp;&amp; 

NOT ((From_Lead_Conversion__c &amp;&amp; IsNew()) || 
(From_Lead_Conversion__c &amp;&amp; (Now()-CreatedDate &lt;0.000694444)))
&amp;&amp; 
(($Profile.Name != &quot;System Administrator&quot; ) || ($Profile.Name = &quot;System Administrator&quot;&amp;&amp; PRIORVALUE(Bypass__c)=false &amp;&amp; (Bypass__c != true)))</errorConditionFormula>
        <errorDisplayField>Industry</errorDisplayField>
        <errorMessage>Please choose Account Vertical Market for this Account Type value</errorMessage>
    </validationRules>
</CustomObject>